# plan-forge

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  shell.nix
.claude/commands/: plan.md
.claude/skills/auto-plan/: SKILL.md
.direnv/: nix-profile-26.05-a47in4d39ig0vxdv  nix-profile-26.05-a47in4d39ig0vxdv.rc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml
dev/active/add-version-flag-to-cli/: add-version-flag-to-cli-context.md  add-version-flag-to-cli-plan.md  add-version-flag-to-cli-tasks.md
dev/active/say-hello-implementation/: say-hello-implementation-context.md  say-hello-implementation-plan.md  say-hello-implementation-tasks.md
integrations/claude-code/: README.md
integrations/claude-code/agents/: plan-forge.md
integrations/claude-code/commands/: cancel-ralph.md  plan-update.md  plan.md  ralph-loop.md
integrations/claude-code/hooks/: stop-hook.sh
integrations/claude-code/scripts/: setup-ralph-loop.sh
recipes/: orchestrator.yaml  planner.yaml  reviewer.yaml
src/: lib.rs  main.rs  recipes.rs  slug.rs
src/config/: checklist.rs  mod.rs  settings.rs
src/mcp/: mod.rs  server.rs  status.rs
src/models/: mod.rs  plan.rs  review.rs
src/orchestrator/: client.rs  guardrails.rs  loop_controller.rs  mod.rs  orchestration_state.rs  policy.rs  state.rs  viability.rs
src/orchestrator/viability/: dag.rs  dataflow.rs  grounding.rs  instruction.rs  metrics.rs  mod.rs  (+1 more)
src/output/: files.rs  mod.rs
src/phases/: agent_utils.rs  json_utils.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  updater.rs
tests/: orchestrator_integration.rs
(+3 files in other folders)
