[package]
name = "plan-forge"
version = "0.2.0"
edition = "2024"
description = "A CLI tool for iterative AI-driven development planning using goose"
authors = ["Andrey Moor"]
license = "MIT"
repository = "https://github.com/andrey-moor/plan-forge"
homepage = "https://github.com/andrey-moor/plan-forge"
readme = "README.md"
keywords = ["cli", "ai", "planning", "llm", "goose"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core goose crates (using fork for Microsoft Foundry support)
goose = { git = "https://github.com/andrey-moor/goose", branch = "feat/microsoft-foundry-provider" }
goose-mcp = { git = "https://github.com/andrey-moor/goose", branch = "feat/microsoft-foundry-provider" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Platform directories
dirs = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Template rendering
minijinja = { version = "2.12", features = ["loader"] }

# Async trait
async-trait = "0.1"

# JSON schema validation
jsonschema = "0.29"

# Regular expressions (for policy extraction)
regex = "1"
once_cell = "1.19"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# MCP server (uses same version as goose-mcp)
rmcp = { version = "0.12.0", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.0"
glob = "0.3.3"
tokio-util = "0.7.18"

[dev-dependencies]
tempfile = "3.8"
